--- a/public/css/race/view.css
+++ b/public/css/race/view.css
@@ -1,5 +1,1 @@
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/cgiufer\/Sites\/raceapp\/css\/sass\/race\/view\.scss}line{font-family:\000032}}
-.sponsor_name,
-.sponsor_description {
-  display: none;
-}
+.sponsor_name, .sponsor_description { display: none; }
