--- a/public/css/sass/admin.scss
+++ b/public/css/sass/admin.scss
@@ -9,6 +9,7 @@
 // race libs
 @import "race/mixins";
 @import "race/responsive";
+@import "race/helpers";
 
 @import url("admin/jquery-ui-timepicker.css");
 @import url("admin/jquery-ui.css");
