--- a/public/css/sass/race.scss
+++ b/public/css/sass/race.scss
@@ -14,6 +14,7 @@
 @import "race/races";
 @import "race/series";
 @import "race/footer";
+@import "race/helpers";
 
 /* Containers */
 .container-main {
