--- a/public/css/race.css
+++ b/public/css/race.css
@@ -1078,7 +1078,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini { *padding-top: 1px; *pad
 
 .nav-tabs > li { margin-bottom: -1px; }
 
-.nav-tabs > li > a { padding-top: 8px; padding-bottom: 8px; line-height: 20px; border: 1px solid transparent; -webkit-border-radius: 4px 4px 0 0; -moz-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0; }
+.nav-tabs > li > a { cursor: pointer; padding-top: 8px; padding-bottom: 8px; line-height: 20px; border: 1px solid transparent; -webkit-border-radius: 4px 4px 0 0; -moz-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0; }
 .nav-tabs > li > a:hover { border-color: #eeeeee #eeeeee #dddddd; }
 
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover { color: #555555; background-color: #eeeeee; border: 1px solid #ddd; border-bottom-color: transparent; cursor: default; }
